--- a/main.ipynb
+++ b/main.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file_path = './sources/analyzer_analyzer_urls.zip' # add input zip file into 'sources' file\n",
+    "csv_file_path = './sources/analyzer_analyzer_urls.zip' # add input zip file into 'sources' folder\n",
     "df = pd.read_csv(csv_file_path, names=['URL', 'HTML'], compression='zip', header=0, sep=',', quotechar='\"')"
    ]
   },
