--- a/main.ipynb
+++ b/main.ipynb
@@ -152,7 +152,7 @@
     "    \"required\": [\"contact_information_type\", \"contact_information\", \"other_contact_description\"],\n",
     "}\n",
     "\n",
-    "OPEN_API_KEY = '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'\n",
+    "OPEN_API_KEY = '' # add your OpenaI API Key\n",
     "llm = ChatOpenAI(temperature=0, model=\"gpt-4-1106-preview\", openai_api_key=OPEN_API_KEY)"
    ]
   },
